# DeskVolt

./: .gitignore  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: device-request.yml
.github/workflows/: release.yml
installer/: deskvolt.iss
src/: config.rs  device.rs  log.rs  main.rs  tray.rs  worker.rs
src/devices/: corsair.rs  hyperx.rs  logitech.rs  logitech_headsets.rs  mod.rs  playstation.rs  steelseries.rs
src/ui/: mod.rs  render.rs
